# check-jsonschema

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASING.md  bump-version.py  check_jsonschema.py  generate-hooks-config.py  justfile  plan.md  pyproject.toml  setup.cfg  tox.ini  vendor-schemas.py
.github/: dependabot.yml
.github/workflows/: build.yaml  cron.yaml  daily.yaml  publish_to_pypi.yaml  publish_to_test_pypi.yaml
docs/: conf.py  faq.rst  index.rst  install.rst  optional_parsers.rst  precommit_usage.rst  upgrading.rst  usage.rst
scripts/: aggregate-pytest-reports.py  bump-version.py  changelog2md.py  generate-hooks-config.py  set-dev-version.py  vendor-schemas.py
src/check_jsonschema/: __init__.py  _testing.py  cachedownloader.py  catalog.py  checker.py  cli.py  formats.py  identify_filetype.py  instance_loader.py  loaders.py  modeline.py  parse_cli.py  regex_variants.py  reporter.py  result.py  utils.py
src/check_jsonschema/builtin_schemas/: __init__.py
src/check_jsonschema/builtin_schemas/custom/: github-workflows-require-timeout.json
src/check_jsonschema/cli/: __init__.py  common_options.py  legacy.py  main.py  main_command.py  modes.txt  param_types.py  parse_result.py  warnings.py
src/check_jsonschema/cli/commands/: __init__.py
src/check_jsonschema/formats/: __init__.py
src/check_jsonschema/formats/implementations/: __init__.py  rfc3339.py  rfc5321.py  rfc6531.py
src/check_jsonschema/loaders/: __init__.py  errors.py  instance.py  schema.py
src/check_jsonschema/loaders/instance/: __init__.py  json5.py  toml.py  yaml.py
src/check_jsonschema/loaders/schema/: __init__.py  readers.py  resolver.py
src/check_jsonschema/parsers/: __init__.py  json5.py  metadata.py  toml.py  yaml.py
src/check_jsonschema/schema_loader/: __init__.py  main.py  readers.py  resolver.py
src/check_jsonschema/transforms/: __init__.py  azure_pipelines.py  base.py  gitlab.py
tests/: conftest.py  test_cachedownloader.py  test_catalog.py  test_checker.py  test_cli_parse.py  test_configured_hooks.py  test_loaders.py  test_metaschema_validation.py  test_validation_error_printing.py
tests/acceptance/: conftest.py  test_configured_hooks.py  test_custom_validator_class.py  test_example_files.py  test_fill_defaults.py  test_format_email.py  test_format_failure.py  test_format_regex_opts.py  test_gitlab_reference_handling.py  test_hook_file_matches.py  test_invalid_schema_files.py  test_local_relative_ref.py  test_malformed_instances.py  test_nonjson_instance_files.py  test_nonjson_schema_handling.py  test_remote_ref_resolution.py  test_schema_from_modeline.py  test_special_filetypes.py  test_yaml_handling.py
tests/acceptance/custom_schemas/: test_github_workflow_require_explicit_timeout.py
tests/example-files/: config_schema.json
tests/example-files/explicit-schema/negative/unicode_pattern/: instance.json  schema.json
tests/example-files/explicit-schema/positive/2020-meta/: instance.json  schema.json
tests/example-files/explicit-schema/positive/complex-toml/: instance.toml  schema.json
tests/example-files/explicit-schema/positive/complex-yaml/: instance.yaml  schema.json
tests/example-files/explicit-schema/positive/date-format/: instance.json  schema.json
tests/example-files/explicit-schema/positive/integer-keys-yaml/: instance.yaml  schema.json
tests/example-files/explicit-schema/positive/simple-toml/: instance.toml  schema.json
tests/example-files/explicit-schema/positive/unicode_pattern/: instance.json
tests/example-files/hooks/negative/cloudbuild/: empty.yaml
tests/example-files/hooks/negative/drone-ci/: unkown-type-pipeline.yml
tests/example-files/hooks/negative/github-discussion/: announcements.yml
tests/example-files/hooks/negative/jsonschema/: _config.yaml  github-workflow-timeout-minutes-expression.yaml
tests/example-files/hooks/negative/mergify/: example-pr-rules.yaml
tests/example-files/hooks/negative/metaschema/: _config.yaml  draft7_title_array.json  draft7_title_array.yaml
tests/example-files/hooks/negative/mkdocs-material/: inherit_example.yaml
tests/example-files/hooks/negative/readthedocs/: pyversion-float.yml
tests/example-files/hooks/negative/snapcraft/: snapcraft.yaml
tests/example-files/hooks/positive/amazon-ecs-intellisense-schema/: fargate.json
tests/example-files/hooks/positive/azure-pipelines/: expression-from-lang-server.yaml  marshmallow.yaml  object-defined-by-expression-map.yaml
tests/example-files/hooks/positive/bitbucket-pipelines/: bitbucket-pipelines.yml
tests/example-files/hooks/positive/buildkite/: matrix.yml
tests/example-files/hooks/positive/citation-file-format/: CITATION.cff
tests/example-files/hooks/positive/cloudbuild/: hello_world.yaml
tests/example-files/hooks/positive/codecov/: codecov.yml
tests/example-files/hooks/positive/drone-ci/: digitalocean-pipeline.yml  docker-pipeline.yml  exec-pipeline.yaml  kubernetes-pipeline.yml  macstadium-pipeline.yml  ssh-pipeline.yml
tests/example-files/hooks/positive/github-discussion/: announcements.yml
tests/example-files/hooks/positive/github-issue-forms/: bug.yml
tests/example-files/negative/readthedocs/: pyversion-float.yml
tests/example-files/positive/azure-pipelines/: boolean-value.yaml  expression-transform.yaml
tests/example-files/positive/github-actions/: redis-simple.yml
tests/example-files/positive/github-workflows/: self-build.yaml
tests/example-files/positive/renovate/: starter-config.json5
tests/unit/: test_cachedownloader.py  test_catalog.py  test_cli_annotations.py  test_cli_parse.py  test_gitlab_data_transform.py  test_instance_loader.py  test_lazy_file_handling.py  test_loaders.py  test_modeline.py  test_reporters.py  test_schema_loader.py  test_utils.py  test_validation_error_printing.py
tests/unit/cli/: conftest.py  test_annotations.py  test_callbacks.py  test_parse.py  test_schemas.py
tests/unit/formats/: test_rfc3339.py  test_rfc5321.py  test_rfc6531.py  test_time.py
(+15 files in other folders)
