[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "check-jsonschema"
version = "0.33.1"
description = "A jsonschema CLI and pre-commit hook"
authors = [
    { name = "Stephen Rosen", email = "sirosen0@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    'tomli>=2.0;python_version<"3.11"',
    "ruamel.yaml>=0.18.10,<0.19.0",
    "jsonschema>=4.18.0,<5.0",
    "regress>=2024.11.1",
    "requests<3.0",
    "click>=8,<9",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/python-jsonschema/check-jsonschema"

[project.optional-dependencies]
dev = [
    "pytest<9",
    'click-type-test==1.1.0;python_version>="3.10"',
    "coverage<8",
    "identify>=2.6.9",
    "pytest-xdist<4",
    "responses==0.25.7",
]
docs = [
    "sphinx<9",
    "sphinx-issues<6",
    "furo==2024.8.6",
]

[project.scripts]
check-jsonschema = "check_jsonschema:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.isort]
profile = "black"

[tool.mypy]
# strict = true  # TODO: enable
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # dateutil has a Python 3.12 compatibility issue.
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
]
addopts = [
    "--color=yes",
]
