[metadata]
name = check-jsonschema
version = 0.7.1
description = A pre-commit hook for validating files against jsonschemas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/check-jsonschema
author = Stephen Rosen
author_email = sirosen@uchicago.edu

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
install_requires =
    ruamel.yaml==0.16.12
    jsonschema>=3,<5.0  # TODO: drop 3.x when py3.6 is EOL
    identify<2.0
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    check-jsonschema = check_jsonschema:main

[options.extras_require]
dev =
    pytest<7
    pytest-cov<3
    pytest-xdist<3

[isort]
profile = black

[flake8]  # black-compatible
exclude = .git,.tox,__pycache__,.eggs,dist,.venv*,build
max-line-length = 90
ignore = W503,W504,E203,
