[metadata]
name = check-jsonschema
version = 0.14.1
description = A jsonschema CLI and pre-commit hook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python-jsonschema/check-jsonschema
author = Stephen Rosen
author_email = sirosen@uchicago.edu

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
# reference for dependency spec: https://www.python.org/dev/peps/pep-0508/
install_requires =
    importlib_resources;python_version<"3.9"
    ruamel.yaml==0.16.12
    jsonschema>=4,<5.0
    identify>2.4.10,<3
    requests<3.0
package_dir=
    =src
packages = find:
include_package_data = true

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    check-jsonschema = check_jsonschema:main

[options.extras_require]
dev =
    pytest<7
    pytest-cov<3
    pytest-xdist<3
    responses==0.18.0

[isort]
profile = black

[flake8]  # black-compatible
exclude = .git,.tox,__pycache__,.eggs,dist,.venv*,build
max-line-length = 90
ignore = W503,W504,E203,

[mypy]
# strict = true  # TODO: enable
ignore_missing_imports = true
warn_unreachable = true
warn_no_return = true
