[metadata]
name = check-jsonschema
version = 0.27.0
description = A jsonschema CLI and pre-commit hook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python-jsonschema/check-jsonschema
author = Stephen Rosen
author_email = sirosen@uchicago.edu

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
# reference for dependency spec: https://www.python.org/dev/peps/pep-0508/
install_requires =
    importlib-resources>=1.4.0;python_version<"3.9"
    ruamel.yaml==0.18.3
    jsonschema>=4.18.0,<5.0
    regress>=0.4.0
    requests<3.0
    click>=8,<9
package_dir=
    =src
packages = find:
include_package_data = true

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    check-jsonschema = check_jsonschema:main

[options.extras_require]
dev =
    pytest<8
    coverage<8
    pytest-xdist<4
    responses==0.23.3
docs =
    sphinx<8
    sphinx-issues<4
    furo==2023.9.10

[isort]
profile = black

[flake8]  # black-compatible
exclude = .git,.tox,__pycache__,.eggs,dist,.venv*,build
max-line-length = 90
ignore = W503,W504,E203,

[mypy]
# strict = true  # TODO: enable
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true
warn_no_return = true
